# Copyright (c) 2022, Arm Limited and Contributors
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 the "License";
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# order matters
add_subdirectory(common)
add_subdirectory(scene_graph)
add_subdirectory(platform)
add_subdirectory(events)
add_subdirectory(windows)
add_subdirectory(vfs)
add_subdirectory(vulkan)
add_subdirectory(assets)
add_subdirectory(shaders)
